--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
-    "@vnuge/vnlib.browser": "https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/27b487b6d0befdb2197a58ceadb1f1ac2b337786/@vnuge-vnlib.browser/release.tgz",
+    "@vnuge/vnlib.browser": "https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/a7cf7c8987b8847984629293d8eb27908f3de3dd/@vnuge-vnlib.browser/release.tgz",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.3.x",
@@ -47,6 +47,6 @@
     "typescript": "^5.0.2",
     "vite": "^5.0.x",
     "vue-eslint-parser": "^9.3.0",
-    "vue-tsc": "^1.4.2"
+    "vue-tsc": "^2.0.x"
   }
 }
