Squashed commit of the following:
commit 28f0f774da975c04271445761b2de31aecf969ff
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 23:11:48 2024 -0400

    Add --no-cache arg to build image args

commit 22a1f5d374ec1a487944c6303066d0f15617cb12
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 18:47:25 2024 -0400

    fix: Upstream patch missing ! in middlware

commit f40ca2d4c26f81276d58760152592a918bf3cd87
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 18:36:01 2024 -0400

    chore: package updates

commit d7a3c957467e65ea7176170fba3c280ac18ac17e
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Apr 21 12:02:57 2024 -0400

    chore: Package updates and minor QOL patches

commit 97a5bded5122708cf39d0e86bc24a5f31755bdd1
Merge: 56e0a38 5877c86
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 9 17:38:02 2024 -0400

    Merge branch 'master' into develop

commit 56e0a38b2ca246e8beeaef3c6c4b9c0ce7d0f09b
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 9 17:35:13 2024 -0400

    chore(app): Update deps, login spinner, curl msg, view prep

commit 0945210c0492dd8a8de99ccd8e5e66cf05e3a1c1
Merge: 24fac82 3c15d54
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 2 14:58:59 2024 -0400

    Merge branch 'master' into develop

commit 24fac82efe9e5c18e86ed535678640e7401472db
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 2 14:54:20 2024 -0400

    ci: Configure manual dep versions

commit d2ae31ec919d72e66d8b40db8394b55efd6ea6d3
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Mar 31 22:19:53 2024 -0400

    ci: Native compression support for win

commit fa7fdef79c6d468022b77f81314ac129fe0cdc32
Merge: 308092d a01220a
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Mar 13 21:26:55 2024 -0400

    Merge branch 'master' into develop

commit 308092d6d743d0ba8f7ca86fd77e9c837dc46e88
Merge: 48637a8 9134093
Author: vnugent <public@vaughnnugent.com>
Date:   Wed Mar 13 21:01:02 2024 -0400

    Merge 

--- a/ci/container/Dockerfile
+++ b/ci/container/Dockerfile
@@ -5,7 +5,7 @@
 FROM alpine:3.19 as native-cont
 
 #install public libs and build tools
-RUN apk update && apk add build-base cmake npm git
+RUN apk update && apk add --no-cache build-base cmake npm git
 #most universal way to use Task is from NPM
 RUN npm install -g @go-task/cli
 
@@ -84,6 +84,7 @@ ENV VNCACHE_CACHE_PUBLIC_KEY=""
 #HTTP/PROXY Config
 ENV HTTP_DOWNSTREAM_SERVERS=[]
 ENV SSL_JSON="{}"
+ENV HTTP_TRACE_ON=false
 
 #run the init script within dumb-init
 ENTRYPOINT ["dumb-init", "--"]
