--- a/ci/container/Taskfile.yaml
+++ b/ci/container/Taskfile.yaml
@@ -21,6 +21,8 @@ tasks:
     vars:
       OUT_DIR: "{{.USER_WORKING_DIR}}/out"
       SSL_DIR: "{{.USER_WORKING_DIR}}/ssl"
+      HOSTNAME: 
+        sh: echo $HOSTNAME
 
     #build stage generates the following libraries
     generates:
@@ -33,13 +35,11 @@ tasks:
       - cd lib/argon2/ && task && cp build/libargon2.so {{.OUT_DIR}}/libargon2.so
       #build rpmalloc library
       - cd lib/vnlib_rpmalloc/ && task && cp build/libvn_rpmalloc.so {{.OUT_DIR}}/libvn_rpmalloc.so 
-      #install zlib and brotli native libraries from the source repos (they dont have active releases anymore :()
+      #build compression
       - cd lib/vnlib_compress/ && task && cp build/libvn_compress.so {{.OUT_DIR}}/libvn_compress.so
-      #build native compression lib and put in lib dir
-      - cd lib/vnlib_compress && cmake -B./build && cmake --build build/ --config Release && cp build/libvn_compress.so {{.OUT_DIR}}/libvn_compress.so
 
       #create a fresh self-signed cert for the container during build
-      - openssl req -new -x509 -days 365 -keyout {{.SSL_DIR}}/key.pem -out {{.SSL_DIR}}/cert.pem -newkey {{.CERT_KEY_PARAMS}} --nodes
+      - openssl req -new -x509 -days 365 -keyout {{.SSL_DIR}}/key.pem -out {{.SSL_DIR}}/cert.pem -newkey {{.CERT_KEY_PARAMS}} --nodes -subj "/CN={{.HOSTNAME}}"
       - echo "WARNING Self signed certificate created during build stage, DO NOT COPY THIS IMAGE"
 
   #called from ci pipline to build the package
