Squashed commit of the following:
commit e6b4e605622f2b323fd3fe0aa01000f3986e3bba
Author: vnugent <public@vaughnnugent.com>
Date:   Wed May 15 16:35:06 2024 -0400

    build: Fix ssl container dir, and certificate automation

commit a710553aa5c0484b6934b8a5d4d16b1eb3ff2a88
Author: vnugent <public@vaughnnugent.com>
Date:   Wed May 15 15:37:53 2024 -0400

    ci: Admin form clear, polish build and release taskfiels

commit 372eb6a32a9891afb5035caa0805e8ed878416d8
Author: vnugent <public@vaughnnugent.com>
Date:   Tue May 14 22:27:10 2024 -0400

    default read secret pepper from file for bare-metal builds

commit 1b7270b40b65ef089bf40a14065227f742b8507e
Author: vnugent <public@vaughnnugent.com>
Date:   Tue May 14 21:52:03 2024 -0400

    chore: make container slightly easier to setup

commit 2deda50a167286bc93fd3871a1fd6dbf9f43c81f
Merge: 28f0f77 96ae7b0
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Apr 28 10:54:09 2024 -0400

    Merge branch 'master' into develop

commit 28f0f774da975c04271445761b2de31aecf969ff
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 23:11:48 2024 -0400

    Add --no-cache arg to build image args

commit 22a1f5d374ec1a487944c6303066d0f15617cb12
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 18:47:25 2024 -0400

    fix: Upstream patch missing ! in middlware

commit f40ca2d4c26f81276d58760152592a918bf3cd87
Author: vnugent <public@vaughnnugent.com>
Date:   Sat Apr 27 18:36:01 2024 -0400

    chore: package updates

commit d7a3c957467e65ea7176170fba3c280ac18ac17e
Author: vnugent <public@vaughnnugent.com>
Date:   Sun Apr 21 12:02:57 2024 -0400

    chore: Package updates and minor QOL patches

commit 97a5bded5122708cf39d0e86bc24a5f31755bdd1
Merge: 56e0a38 5877c86
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 9 17:38:02 2024 -0400

    Merge branch 'master' into develop

commit 56e0a38b2ca246e8beeaef3c6c4b9c0ce7d0f09b
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Apr 9 17:35:13 2024 -0400

  

--- a/ci/config/config.json
+++ b/ci/config/config.json
@@ -177,6 +177,6 @@
   //Global secrets object, used by the host and pluings for a specialized secrets
   "secrets": {
     //"db_password": ""
-    "passwords": "yourbase64passwordsecret"
+    "passwords": "file://secrets/password-pepper.txt"
   }
 }
