Squashed commit of the following:
commit bbe3b9b80db68cf86e26bd2e40a07c1650031224
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 15:54:42 2024 -0400

    ignore npm version bump errors for build

commit 45816924e5a47710a6bc4ed0d59ea81a48eddd1e
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 15:30:35 2024 -0400

    project version in ui

commit 03357c9f7b7fa389d2d426e95d9854b7b04623f9
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 12:59:30 2024 -0400

    chore: Essentials upstream update

commit b6d292014700d05a93aa4e486baedf37656f464a
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 19:09:28 2024 -0400

    docs: Update readme instructions

commit 5b6b4c06bc4b974e1839ca47c91dd6c903f119fd
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 18:17:56 2024 -0400

    build(server): Update Docker config to support new vars

commit c7c9e8a441e99e1dc79e2a690d83281af463d817
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 17:40:09 2024 -0400

    update backend deps

commit 06eb12d107f2605cae0f14884de04058c02d29f7
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 17:38:22 2024 -0400

    chore: package updates and verify

commit c8e3ca86be45be05c1f76a7dd808275a1afaccb0
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 16 17:10:27 2024 -0400

    chore: Remove unused cache stuff

commit ba2ee1073a5042bda0afc2b56233fe99d491b39d
Merge: e6b4e60 28e67e5
Author: vnugent <public@vaughnnugent.com>
Date:   Wed May 15 18:08:48 2024 -0400

    Merge branch 'master' into develop

commit e6b4e605622f2b323fd3fe0aa01000f3986e3bba
Author: vnugent <public@vaughnnugent.com>
Date:   Wed May 15 16:35:06 2024 -0400

    build: Fix ssl container dir, and certificate automation

commit a710553aa5c0484b6934b8a5d4d16b1eb3ff2a88
Author: vnugent <public@vaughnnugent.com>
Date:   Wed May 15 15:37:53 2024 -0400

    ci: Admin form clear, polish build and release taskfiels

commit 372eb6a32a9891afb5035caa0805e8ed

--- a/ci/container/docker-compose.yaml
+++ b/ci/container/docker-compose.yaml
@@ -19,24 +19,33 @@ services:
     environment:
       MAX_BOOKMARKS: "5000"
       REG_TOKEN_DURATION_MIN: "360"  #6 hours
+
       #SQL Config
       SQL_LIB_PATH: "VNLib.Plugins.Extensions.Sql.SQLite.dll"
       SQL_CONNECTION_STRING: "Data Source=data/simple-bookmark.db;"
-      #HC Vault
-      HC_VAULT_ADDR: ""
-      HC_VAULT_TOKEN: ""
-      HC_VAULT_TRUST_CERT: "false"
+
+      #HC Vault client config
+      #HC_VAULT_ADDR: ""
+      #HC_VAULT_TOKEN: ""
+      #HC_VAULT_TRUST_CERT: "false"
+
       #VNCACHE (default to memory only)
       CACHE_ASM_PATH: "VNLib.Data.Caching.Providers.VNCache.dll"
       MEMCACHE_ONLY: "true"
       REDIS_CONNECTION_STRING: ""
       #at least one node required if MEMCACHE_ONLY is false
       VNCACHE_INITIAL_NODES: "[]"
-      #ACCOUNTS
+
+      #Accounts plugin config
       MAX_LOGIN_ATTEMPS: "10"
 
       #SECRETS
-      PASSWORD_PEPPER: ""   #A base64 encoded secret is required. raw string, vault://, file:// allowed
+      #All secrets may be a raw value, read from a file, 
+      #an environment variable, or a vault path
+      # file://mysecret.txt     reads the secret from a file (case sensitive)
+      # env://MY_SECRET         reads the secret from an environment variable (case sensitive)
+      # vault://kv/data/secret?secret=value   reads the value of the mysecret key in the secret/data path
+      PASSWORD_PEPPER: ""     #Must be a base64 encoded value, of realtivley any size
       DATABASE_PASSWORD: ""
       REDIS_PASSWORD: ""
       #if MEMCACHE_ONLY is false, then the following keys are required to connect to a VNCACHE cluster
@@ -44,8 +53,11 @@ services:
       VNCACHE_CACHE_PUBLIC_KEY: ""
 
       #HTTP
-      HTTP_DOWNSTREAM_SERVERS: '[]'
-      HTTP_TRACE_ON: "false"
-      
+      HTTP_DOWNSTREAM_SERVERS: '[]'   #a comma separated list of downstream ip addresses
+      HTTP_TRACE_ON: "false"          #enable http trace logging, requires --debug CLI flag
+
+      #Very Verbose plugin logging, required --debug CLI flag, prints literally everything to the logger
+      DEBUG_PLUGINS: "false"
+
       SERVER_ARGS: "--setup" #remove the setup flag after you are done setting up the server
 
