--- a/Module.Taskfile.yaml
+++ b/Module.Taskfile.yaml
@@ -9,14 +9,17 @@ tasks:
   #update project source code
   update:
     cmds:
-     - git remote update
      - git reset --hard  
+     - git remote update
      - git pull origin {{.BRANCH_NAME}} --verify-signatures
       #re-write semver for back-end after hard reset
      - dotnet-gitversion.exe /updateprojectfiles
 
   build:
     cmds:
+     #overwrite front-end version, this must be run on build hook because update can cause the version to change 
+     - cmd: cd front-end/ && npm version {{ .BUILD_VERSION }}
+       ignore_error: true #error if run when version is not updated
     
   #copy artifacts to temp directory
   postbuild_success:
